# cc-workbench

./: .gitignore  Cargo.toml  MARKETPLACE.md  README.md  README_CN.md
.cc-workbench/: ccwb.sqlite
.claude-plugin/: marketplace.json
plugins/cc-workbench/.claude-plugin/: plugin.json
plugins/cc-workbench/commands/: install.md
scripts/: install.sh  uninstall.sh
src/: main.rs
